2001-08-30  Thomas Flynn <tflynn@users.sourceforge.net>

	* Add insert/remove Element methods to all VrmlMF* types.

2001-08-25  Thomas Flynn <tflynn@users.sourceforge.net>

	* Add licensing information to java support files.

2001-08-23  Braden McDaniel  <braden@endoframe.com>

        * Some minor cleanup of VrmlScene.

        * Changed name of "VrmlNodeType" class to "NodeType".

        * Use a refcounting smart pointer for NodeTypes.

        * Changed NodeType::getName() to ::getId().

2001-08-22  Thomas Flynn <tflynn@users.sourceforge.net>

	* Fixed typo in README.

	* Add ScriptJDK back into the build.

	* Use OPENVRML_HAVE_JAVA instead of HAVE_JDK.

	* Update ScriptJDK code to use std::string. 

2001-08-22  Braden McDaniel  <braden@endoframe.com>

        * Fixed crash in VrmlScene::readPROTO().

        * Fixed event value propagation problem in VrmlNode::eventIn()
          (introduced in transition to std::string).

2001-08-19  Braden McDaniel  <braden@endoframe.com>

        * Added getChildren() method to VrmlNode; implemented this for
          everything except VrmlNodeProto.

        * Changed VrmlNode::setName() and ::getName() to setId() and
          getId().

2001-08-16  Braden McDaniel  <braden@endoframe.com>

        * Changed reinterpret_casts in the JavaScript binding to
          static_casts.

2001-08-13  Braden McDaniel  <braden@endoframe.com>

        * Changed most uses of char * to std::string.

2001-08-09  Braden McDaniel  <braden@endoframe.com>

        * Changed JavaScript binding to use a wrapper class to track
          meta-data about values corresponding to Script node fields/
          eventOuts, rather than storing this data as properties on the
          JavaScript objects.

        * Minor const-correctness changed to ScriptObject::activate().

        * Changed VrmlMFNode implementation to use std::vector<>.

2001-08-08  Braden McDaniel  <braden@endoframe.com>
